[package]
name = "asylum"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossbeam-channel = "0.5.11"
env_logger = "0.10.1"
log = "0.4.20"
postgres = "0.19.7"
reqwest = { version = "0.11.23", features = ["json"] }
serde = "1.0.193"
serde_json = "1.0.108"
shuttle-runtime = "0.35.0"
shuttle-secrets = "0.35.0"
tokio = "1.35.1"
tokio-postgres = "0.7.10"
toml = "0.8.8"
